align issues

--- a/css/style.css
+++ b/css/style.css
@@ -28,9 +28,9 @@ LEFT SIDE STYLE
 	float:left !important;
 }
 
-/*.field-type-text-with-summary.field-name-body.field-widget-text-textarea-with-summary {
+.field-type-text-with-summary.field-name-body.field-widget-text-textarea-with-summary {
 	margin-top:150px;
-}*/
+}
 
 .form-type-radio.form-item-field-rating-und.form-item {
 	clear:both;
